Fixing text wrapping

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -38,3 +38,7 @@ a:hover {
 img {
     max-width: 100%;
 }
+
+.picture-text {
+    white-space: nowrap;
+}
